// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Stories multipleRowsshould match snapshot 1`] = `
<body>
  <div>
    <div
      class="flex flex-col "
    >
      <div
        class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
      >
        <div
          class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8"
        >
          <div
            class="overflow-hidden border border-gray-200 sm:rounded"
          >
            <table
              class="min-w-full "
            >
              <thead>
                <tr>
                  <th
                    class="
                text-left
                px-6 py-4 text-xs font-medium leading-4 tracking-wider text-gray-700 uppercase bg-gray-100"
                  >
                    Name
                  </th>
                  <th
                    class="
                text-right
                px-6 py-4 text-xs font-medium leading-4 tracking-wider text-gray-700 uppercase bg-gray-100"
                  >
                    Number
                  </th>
                  <th
                    class="
                text-right
                px-6 py-4 text-xs font-medium leading-4 tracking-wider text-gray-700 uppercase bg-gray-100"
                  >
                    Updated at
                  </th>
                </tr>
              </thead>
              <tbody
                class="bg-white divide-y divide-gray-200"
              >
                <tr>
                  <td
                    class="text-left"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="text-sm leading-5 text-right text-gray-900"
                      >
                        Andreas Thomas
                      </span>
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="inline-flex px-2 text-sm rounded-full text-purple-800 bg-purple-100"
                      >
                        123456789
                      </span>
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="text-sm leading-5 text-right text-gray-900"
                      >
                        22.09.2020
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-left"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="text-lg font-medium text-gray-900"
                      >
                        Nico Webersinke
                      </span>
                      <p
                        class="text-sm text-gray-500"
                      >
                        Product lead
                      </p>
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="text-sm leading-5 text-right text-gray-900"
                      >
                        123456789
                      </span>
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="text-sm leading-5 text-right text-gray-900"
                      >
                        22.09.2020
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-left"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="text-sm leading-5 text-right text-gray-900"
                      >
                        Mads Jordt
                      </span>
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="text-sm leading-5 text-right text-gray-900"
                      >
                        123456789
                      </span>
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="text-sm leading-5 text-right text-gray-900"
                      >
                        22.09.2020
                      </span>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-left"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="text-sm leading-5 text-right text-gray-900"
                      >
                        Kevin Kohler
                      </span>
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="text-sm leading-5 text-right text-gray-900"
                      >
                        123456789
                      </span>
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="text-sm leading-5 text-right text-gray-900"
                      >
                        22.09.2020
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Table Stories onDarkshould match snapshot 1`] = `
<body>
  <div>
    <div
      class="p-10 bg-gray-900"
    >
      <div
        class="flex flex-col "
      >
        <div
          class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
        >
          <div
            class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8"
          >
            <div
              class="overflow-hidden border border-gray-200 sm:rounded"
            >
              <table
                class="min-w-full "
              >
                <thead>
                  <tr>
                    <th
                      class="
                text-left
                px-6 py-4 text-xs font-medium leading-4 tracking-wider text-gray-700 uppercase bg-gray-100"
                    >
                      Name
                    </th>
                    <th
                      class="
                text-right
                px-6 py-4 text-xs font-medium leading-4 tracking-wider text-gray-700 uppercase bg-gray-100"
                    >
                      Number
                    </th>
                    <th
                      class="
                text-right
                px-6 py-4 text-xs font-medium leading-4 tracking-wider text-gray-700 uppercase bg-gray-100"
                    >
                      Updated at
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="bg-white divide-y divide-gray-200"
                >
                  <tr>
                    <td
                      class="text-left"
                    >
                      <div
                        class="px-3 py-2 whitespace-no-wrap"
                      >
                        <span
                          class="text-sm leading-5 text-right text-gray-900"
                        >
                          Andreas Thomas
                        </span>
                      </div>
                    </td>
                    <td
                      class="text-right"
                    >
                      <div
                        class="px-3 py-2 whitespace-no-wrap"
                      >
                        <span
                          class="inline-flex px-2 text-sm rounded-full text-purple-800 bg-purple-100"
                        >
                          123456789
                        </span>
                      </div>
                    </td>
                    <td
                      class="text-right"
                    >
                      <div
                        class="px-3 py-2 whitespace-no-wrap"
                      >
                        <span
                          class="text-sm leading-5 text-right text-gray-900"
                        >
                          22.09.2020
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="text-left"
                    >
                      <div
                        class="px-3 py-2 whitespace-no-wrap"
                      >
                        <span
                          class="text-lg font-medium text-gray-900"
                        >
                          Nico Webersinke
                        </span>
                        <p
                          class="text-sm text-gray-500"
                        >
                          Product lead
                        </p>
                      </div>
                    </td>
                    <td
                      class="text-right"
                    >
                      <div
                        class="px-3 py-2 whitespace-no-wrap"
                      >
                        <span
                          class="text-sm leading-5 text-right text-gray-900"
                        >
                          123456789
                        </span>
                      </div>
                    </td>
                    <td
                      class="text-right"
                    >
                      <div
                        class="px-3 py-2 whitespace-no-wrap"
                      >
                        <div
                          class="flex items-center justify-center"
                        >
                          <div
                            class="flex-shrink-0 w-10 h-10"
                          >
                            <div
                              class="text-red-800 bg-red-200"
                            >
                              <span>
                                <svg
                                  class="w-full"
                                  fill="none"
                                  stroke="currentColor"
                                  viewBox="0 0 24 24"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                          <div
                            class="flex flex-col items-start pl-2"
                          />
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="text-left"
                    >
                      <div
                        class="px-3 py-2 whitespace-no-wrap"
                      >
                        <span
                          class="text-sm leading-5 text-right text-gray-900"
                        >
                          Mads Jordt
                        </span>
                      </div>
                    </td>
                    <td
                      class="text-right"
                    >
                      <div
                        class="px-3 py-2 whitespace-no-wrap"
                      >
                        <span
                          class="text-lg font-medium text-gray-900"
                        >
                          Lorem
                        </span>
                        <p
                          class="text-sm text-gray-500"
                        >
                          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                        </p>
                      </div>
                    </td>
                    <td
                      class="text-right"
                    >
                      <div
                        class="px-3 py-2 whitespace-no-wrap"
                      >
                        <span
                          class="text-sm leading-5 text-right text-gray-900"
                        >
                          22.09.2020
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="text-left"
                    >
                      <div
                        class="px-3 py-2 whitespace-no-wrap"
                      >
                        <span
                          class="text-sm leading-5 text-right text-gray-900"
                        >
                          Kevin Kohler
                        </span>
                      </div>
                    </td>
                    <td
                      class="text-right"
                    >
                      <div
                        class="px-3 py-2 whitespace-no-wrap"
                      >
                        <span
                          class="text-sm leading-5 text-right text-gray-900"
                        >
                          123456789
                        </span>
                      </div>
                    </td>
                    <td
                      class="text-right"
                    >
                      <div
                        class="px-3 py-2 whitespace-no-wrap"
                      >
                        <button
                          class="text-sm font-medium leading-5 text-indigo-600 hover:text-indigo-900"
                        >
                          Click me
                        </button>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Table Stories previewModeshould match snapshot 1`] = `
<body>
  <div>
    <div
      class="flex flex-col "
    >
      <div
        class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
      >
        <div
          class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8"
        >
          <div
            class="overflow-hidden border border-gray-200 sm:rounded"
          >
            <table
              class="min-w-full "
            >
              <thead>
                <tr>
                  <th
                    class="
                text-left
                px-6 py-4 text-xs font-medium leading-4 tracking-wider text-gray-700 uppercase bg-gray-100"
                  >
                    Name
                  </th>
                  <th
                    class="
                text-right
                px-6 py-4 text-xs font-medium leading-4 tracking-wider text-gray-700 uppercase bg-gray-100"
                  >
                    Number
                  </th>
                  <th
                    class="
                text-right
                px-6 py-4 text-xs font-medium leading-4 tracking-wider text-gray-700 uppercase bg-gray-100"
                  >
                    Updated at
                  </th>
                </tr>
              </thead>
              <tbody
                class="bg-white divide-y divide-gray-200"
              >
                <tr>
                  <td
                    class="text-left"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="inline-flex w-full h-2 max-w-xs rounded-sm animate-pulse md:h-3 bg-gradient-to-t from-gray-200 to-gray-300"
                      />
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="inline-flex w-full h-2 max-w-xs rounded-sm animate-pulse md:h-3 bg-gradient-to-t from-gray-200 to-gray-300"
                      />
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="inline-flex w-full h-2 max-w-xs rounded-sm animate-pulse md:h-3 bg-gradient-to-t from-gray-200 to-gray-300"
                      />
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-left"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="inline-flex w-full h-2 max-w-xs rounded-sm animate-pulse md:h-3 bg-gradient-to-t from-gray-200 to-gray-300"
                      />
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="inline-flex w-full h-2 max-w-xs rounded-sm animate-pulse md:h-3 bg-gradient-to-t from-gray-200 to-gray-300"
                      />
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="inline-flex w-full h-2 max-w-xs rounded-sm animate-pulse md:h-3 bg-gradient-to-t from-gray-200 to-gray-300"
                      />
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-left"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="inline-flex w-full h-2 max-w-xs rounded-sm animate-pulse md:h-3 bg-gradient-to-t from-gray-200 to-gray-300"
                      />
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="inline-flex w-full h-2 max-w-xs rounded-sm animate-pulse md:h-3 bg-gradient-to-t from-gray-200 to-gray-300"
                      />
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="inline-flex w-full h-2 max-w-xs rounded-sm animate-pulse md:h-3 bg-gradient-to-t from-gray-200 to-gray-300"
                      />
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Table Stories singleRowshould match snapshot 1`] = `
<body>
  <div>
    <div
      class="flex flex-col "
    >
      <div
        class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
      >
        <div
          class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8"
        >
          <div
            class="overflow-hidden border border-gray-200 sm:rounded"
          >
            <table
              class="min-w-full "
            >
              <thead>
                <tr>
                  <th
                    class="
                text-left
                px-6 py-4 text-xs font-medium leading-4 tracking-wider text-gray-700 uppercase bg-gray-100"
                  >
                    Name
                  </th>
                  <th
                    class="
                text-right
                px-6 py-4 text-xs font-medium leading-4 tracking-wider text-gray-700 uppercase bg-gray-100"
                  >
                    Number
                  </th>
                  <th
                    class="
                text-right
                px-6 py-4 text-xs font-medium leading-4 tracking-wider text-gray-700 uppercase bg-gray-100"
                  >
                    Updated at
                  </th>
                </tr>
              </thead>
              <tbody
                class="bg-white divide-y divide-gray-200"
              >
                <tr>
                  <td
                    class="text-left"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="text-sm leading-5 text-right text-gray-900"
                      >
                        Andreas Thomas
                      </span>
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="inline-flex px-2 text-sm rounded-full text-purple-800 bg-purple-100"
                      >
                        123456789
                      </span>
                    </div>
                  </td>
                  <td
                    class="text-right"
                  >
                    <div
                      class="px-3 py-2 whitespace-no-wrap"
                    >
                      <span
                        class="text-sm leading-5 text-right text-gray-900"
                      >
                        22.09.2020
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
